--- a/RRR/src/index.css
+++ b/RRR/src/index.css
@@ -130,7 +130,7 @@ header{
   margin: 1.5rem auto 0 auto;
   padding: 12px 20px;
   background: var(--main-color);
-  color: var(--bg-color);
+  color: black;
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
