--- a/RRR/src/index.css
+++ b/RRR/src/index.css
@@ -18,9 +18,109 @@
 }
 img{
   width: 100%;
-  max-width: 300px;
-  max-height: 300px;
+  max-width: 200px;
+  max-height: 200px;
 }
+
+
+
+.product-box:hover 
+{
+  
+  padding: 10px; 
+  border: 1px solid pink;
+  transition: 0.4s;
+  color : rgb(255, 255, 255);
+  background-color: #1628c6;
+}
+
+.product-info{
+ display: none;
+}
+.product-box:hover  .product-info{
+  display: block;
+  transition: 0.4s;
+  background-color: #1628c6;
+  color: white;
+  padding: 10px;
+  border: 1px solid pink;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  
+  text-decoration: none;
+  color: white;
+
+
+}
+
+.product-box:hover .product-image{
+  display: none;
+  transition: 0.4s;
+  background-color: #1628c6;
+
+
+}
+.product-box:hover .pulse{
+  display: block;
+  cursor: pointer;
+}
+
+
+.pulse a:hover{ 
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;   
+}
+#cart-icon:hover{ 
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;   
+}
+.cart-remove:hover{
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;   
+}
+.btn-buy:hover{
+  animation: pulse 1s infinite;
+  animation-timing-function: linear;   
+}
+.cart-remove{
+  cursor: pointer;
+}
+a{
+  max-height: 70px;
+  margin: auto;
+  background: #fff;
+  padding: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 25px #000;
+  
+  border: 1px solid #444;  
+  text-align: center;
+  display: block;
+  color: #444;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.pulse{
+  display: none;
+  margin-top: 20px;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+  }
+
+
+
+
 body{
   color: var(--text-color);
 }
@@ -33,28 +133,44 @@ section{
   padding: 4rem 0 3rem;
 }
 header{
-  position: fixed;
+  
+  position: sticky;
   top: 0;
   left: 0;
   width : 100%;
+  max-height: 1064px ;
+  
+  
   background: var(--bg-color);
   box-shadow: 0 1px 4px hs1(0 4% 15%/ 10%);
-  z-index: 100;
+  z-index: 100
 }
 .nav{
+  background: grey;
   display: flex;
   align-items: center;
-  justify-content:space-between ;
-  padding: 20px 0
+  justify-content:center ;
+  padding: 20px 0;
+  flex-direction: column-reverse;
+  max-height: 150px;
 }
 .logo{
   font: size 1.1rem;
-  color: var(--text-color);
+  color: white;
   font-weight: 400;
+  font-family: 'Unbounded', cursive;
+  align-self: center;
+  margin-bottom: 10px;
+  
+
+  
 }
 #cart-icon{
   font-size: 1.8rem;
   cursor: pointer;
+  align-self: flex-end;
+  margin-right: 20px;
+
 }
 .cart{
   position: fixed;
@@ -130,13 +246,14 @@ header{
   margin: 1.5rem auto 0 auto;
   padding: 12px 20px;
   background: var(--main-color);
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
 }
 .btn-buy:hover{
-  background: var(--text-color);
+  background: green;
+  color: black;
 }
 #close-cart{
   position: absolute;
@@ -151,6 +268,7 @@ header{
   font-size: 1.5rem;
   font-weight: 600;
   text-align: center;
+  margin-bottom: 20px;
  
 }
 .shop{
@@ -162,12 +280,22 @@ header{
 }
 .product-box{
   position: relative;
+  position: relative;
+  display: flex;
+  
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  height: 250px;
+  flex-wrap: wrap-reverse;
+  
+  overflow: hidden;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+  transition: all 0.3s ease-in-out;
+  background: transparent;
+  
 }
-.product-box:hover {
-  padding: 10px; 
-  border: 1px solid var(--text-color);
-  transition: 0.4s;
-}
+
 .product-img {
   width: 100%;
   height: auto;
@@ -225,3 +353,6 @@ header{
     width: 280px;
   }
 }
+
+
+
