--- a/RRR/src/index.css
+++ b/RRR/src/index.css
@@ -1,9 +1,15 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Unbounded:wght@200&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Unbounded:wght@200&display=swap');
+ 
+
+
+
+
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -13,11 +19,13 @@
     font-family: 'Poppins', sans-serif;
     list-style: none;
     text-decoration: none;
-}
-:root{
+} 
+
+
+/* :root{
   --main-color: #fd4646;
   --text-color: #171427;
   --bg-color: #fff
   ;
 
-}
+} */
