--- a/RRR/src/shop.css
+++ b/RRR/src/shop.css
@@ -150,6 +150,8 @@ header{
 }
 #cart-icon{
   position: absolute;
+  top: 0;
+  right: 0;
   font-size: 1.8rem;
   cursor: pointer;
   align-self: flex-end;
@@ -299,13 +301,19 @@ header{
 .product-img {
   width: 100%;
   height: auto;
-  margin-bottom: 0.5rem;
+ 
 }
 .product-title {
   font-size: 1.1rem;
   font-weight: 600;
   text-transform: uppercase;
-  margin-bottom: 0.5rem;
+  
+  position: absolute;
+  top: 0;
+  margin-top: 5px;
+  
+  text-align: center;
+  
 }
 .price{
   font-weight: 500;
